Fixes code wrapping in <code> fragments

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -33,12 +33,13 @@
     body .work {
         background-color: #d9d7d7;
     }
+
     body code {
         margin: auto 4px;
         padding: 2px 4px;
         font-size: .78em;
         line-height: 1.5;
-        white-space: pre-wrap;
+        white-space: pre;
         background-color: rgb(231 229 228 / var(--tw-bg-opacity));
         border-radius: 0.375rem;
     }
@@ -65,7 +66,7 @@
     body.dark .work,
     body.dark code,
     body.dark pre,
-    body.dark nav div  {
+    body.dark nav div {
         background-color: #37383e;
         border: none;
     }
